--- a/package.json
+++ b/package.json
@@ -17,10 +17,14 @@
   "dependencies": {
     "@auth/prisma-adapter": "^2.7.4",
     "@prisma/client": "^5.22.0",
+    "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-scroll-area": "^1.2.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-tabs": "^1.1.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "color-hash": "^2.0.2",
     "lucide-react": "^0.461.0",
     "next": "15.0.3",
     "next-auth": "5.0.0-beta.25",
@@ -31,6 +35,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/color-hash": "^2.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
