--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ AUTH_GOOGLE_SECRET={CLIENT_SECRET}
 AUTH_GITHUB_ID={CLIENT_ID}
 AUTH_GITHUB_SECRET={CLIENT_SECRET}
 AUTH_RESEND_KEY={RESEND_KEY}
+YT_API_KEY={YT_API_KEY}
