--- a/tsconfig.json
+++ b/tsconfig.json
@@ -27,7 +27,8 @@
     "**/*.ts",
     "**/*.tsx",
     ".next/types/**/*.ts",
-    "public/static/youtube-player.js"
+    "public/static/youtube-player.js",
+    "next.config.js"
   ],
   "exclude": ["node_modules"]
 }
