add queue management and play next track

--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/color-hash": "^2.0.0",
